[package]
name = "half_sun"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.99"
bumpalo = "3.19.0"
ouroboros = "0.18.5"
thiserror = "2.0.16"


[dependencies.mimalloc]
version = "0.1.48"
features = [ "v3" ]


[dev-dependencies]
criterion = "0.7.0"
full_moon = "2.0.0"


[dev-dependencies.lua_parser]
git = "https://github.com/blankuserrr/lua_rust"


[lib]
name = "half_sun"
path = "src/lib.rs"


[[example]]
name = "parse_file"
path = "examples/parse_file.rs"


[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[[bench]]
name = "benchmark_multi"
path = "benches/benchmark_multi.rs"
harness = false